Fix issue where menu appeared behind review stars, and add Facebook link image.

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -8,6 +8,7 @@ nav {
       display: inline-block;
       position: relative;
       margin-right: -4px;
+      z-index: 999;
       ul {
         display: none;
         position: absolute;
